[gd_scene load_steps=8 format=2]

[ext_resource path="res://game/team.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/coin.wav" type="AudioStream" id=2]
[ext_resource path="res://game/team_bar_color.tres" type="StyleBox" id=3]

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/fonts/simple_rounded.ttf"

[sub_resource type="DynamicFont" id=1]
size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 4 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 4 )

[node name="Team" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -284.0
margin_bottom = -570.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Container" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeamColor" type="ColorRect" parent="Container"]
margin_right = 200.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3

[node name="Name" type="Label" parent="Container/TeamColor"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Team 1"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="ProgressBar" type="ProgressBar" parent="Container"]
margin_left = 204.0
margin_right = 996.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = ExtResource( 3 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 25.0
rounded = true
allow_greater = true
percent_visible = false

[node name="Score" type="Label" parent="Container/ProgressBar"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -20.0
custom_fonts/font = SubResource( 3 )
text = "Score"
align = 2
valign = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
pitch_scale = 0.5

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
